Bug 541079 - Make app cache selection happen before speculative loads in the HTML5 parser. r=bnewman.