content/base/src/nsContentSink.h
@@ -247,6 +247,10 @@ public:
   // of the above defined methods to select the document's application
   // cache, let it be associated with the document and eventually
   // schedule the cache update process.
+  void ProcessOfflineManifest(const nsAString& aManifestSpec);
+
+  // Extracts the manifest attribute from the element if it is the root 
+  // element and calls the above method.
   void ProcessOfflineManifest(nsIContent *aElement);
 
 protected:
